--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <hr>
       <div class="row text-center">
         <div class="col-md-6">
-          <p>This project is made by Kamesh #2021 at GRIP.</p>
+          <p>This project is made by Kamesh and Vikram #2021 at GRIP.</p>
           
         </div>
         <div class="col-md-6 text-center">
